K8S/rabbitmq-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-lb
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: rabbitmq-depl
  ports:
    - port: 8124
      targetPort: 15672
      protocol: TCP
