K8S/gateway-srv.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-lb
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-srv
spec:
  gatewayClassName: envoy-lb
  listeners:
    - name: http-listener
      protocol: HTTP
      port: 8123
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-router
spec:
  parentRefs:
    - name: gateway-srv
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/inventory
      backendRefs:
        - name: inventory-clusterip-srv
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /api/books
      backendRefs:
        - name: lending-clusterip-srv
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /api/lending
      backendRefs:
        - name: lending-clusterip-srv
          port: 8080
